fixed projects header spacing

--- a/src/components/Projects Section/project-container-queries.scss
+++ b/src/components/Projects Section/project-container-queries.scss
@@ -1,18 +1,15 @@
 @media screen and (max-width:900px){
 .project-container__container{
+        grid-template-rows: 15vw 1fr 1fr 1fr 1fr 100px;
 
+   .projects-container__header{   
 
-   .projects-container__header{ 
-    
-    margin-top: 5vw;
     text-align: center;
-   
 }     
 }
 }
 @media screen and (max-width:500px){
 .project-container__container{
-
 
    .projects-container__header{ 
     text-align: center;
